--- a/app/styles/components/_button.scss
+++ b/app/styles/components/_button.scss
@@ -5,7 +5,7 @@
   display: block;
   color: $white;
   text-decoration: none;
-  background-color: $black;
+  background-color: #25292D;
   text-shadow: 0px 1px 20px $black;
   padding: 12px 25px;
   margin-top: 30px;
